# MarkScientist

./: .env.example  .gitignore  CHANGES_FROM_RESEARCHHARNESS.md  LICENSE  README.md  pyproject.toml  requirements.txt
markscientist/: __init__.py  cli.py  config.py  harness.py  judging.py  project.py
markscientist/agents/: __init__.py  base.py  challenger.py  evaluator.py  judge.py  solver.py
markscientist/buddy/: __init__.py  sprites.py  types.py
markscientist/models/: __init__.py  anthropic_model.py  base.py  openai_model.py
markscientist/prompts/: __init__.py  role_prompts.py  v01_prompts.py
markscientist/skills/judge-geval/: SKILL.md
markscientist/skills/judge-judgelm/: SKILL.md
markscientist/skills/judge-pairwise/: SKILL.md
markscientist/skills/judge-pandalm/: SKILL.md
markscientist/skills/judge-prometheus/: SKILL.md
markscientist/trajectory/: __init__.py  recorder.py  schema.py
markscientist/workflow/: __init__.py  basic.py
tests/: __init__.py  test_agents.py  test_cli.py  test_judging.py  test_workflow.py
