[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markscientist"
version = "0.1.0"
description = "Self-evolving Research Agent with Built-in Scientific Taste"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "MarkScientist Team" }
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "json5>=0.9.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
markscientist = "markscientist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["markscientist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
