[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markscientist"
version = "0.1.0"
description = "Scientific workflow layer on top of ResearchHarness"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "MarkScientist Team" }
]
dependencies = [
    "openai>=2.3.0",
    "tiktoken>=0.12.0",
    "json5>=0.14.0",
    "Pillow>=11.3.0",
    "requests>=2.32.5",
    "structai>=0.1.22",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
markscientist = "markscientist.cli:main"

[tool.hatch.build]
include = [
    "markscientist/skills/**/SKILL.md",
]

[tool.hatch.build.targets.wheel]
packages = ["markscientist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
